--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: Roboto, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
   background-color: #1a1a2e;
-  color: #ffffff;
+  color: #fff;
   background-image: linear-gradient(45deg, #0f0c29, #302b63, #24243e);
 }
 
@@ -14,10 +14,10 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgb(255 255 255 / 10%);
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0px 0px 20px rgba(0, 255, 255, 0.3);
+  box-shadow: 0 0 20px rgb(0 255 255 / 30%);
 }
 
 .row {
@@ -34,7 +34,7 @@ body {
   font-size: 2em;
   cursor: pointer;
   user-select: none;
-  color: #00ffff;
+  color: #0ff;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
@@ -52,5 +52,5 @@ body {
   margin-top: 20px;
   font-size: 1.5em;
   text-align: center;
-  color: #00ffff;
+  color: #0ff;
 }
